--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
 </head>
 <body>
     <header>
-        <h1>Translation Helper</h1>
-        <p class="subtitle">Help us translate these sentences to improve our language resources</p>
+        <h1>Singlish Translation</h1>
+        <p class="subtitle">Help us translate these sentences from Singlish to English</p>
     </header>
     
     <!-- Name Input Modal -->
