edit the helper text

--- a/index.html
+++ b/index.html
@@ -268,7 +268,18 @@
 <body>
     <header>
         <h1>Singlish Translation</h1>
-        <p class="subtitle">Help us translate these sentences from Singlish to English</p>
+        <p>Help us translate these sentences from Singlish to English<br></p>
+        <div style="display: flex; justify-content: center;">
+            <p class="subtitle"  style="text-align: left;">
+            Some Guidelines: <br>
+            1. Ensure translated text is grammatical.<br>
+            Add grammatical verbs (e.g. "if only my friend enlisted on Monday" to "if only my friend <i>had</i> enlisted on Monday"), <br>
+            or change word tenses (e.g. "i tried and <i>like</i> it" to "i tried and <i>liked</i> it") if needed. <br>
+            2. Add punctuations if needed (e.g., "if not no one will accept her" to "if <i>not,</i> no one will accept her") <br>
+            3. Informal text/ short forms can be left as it is <br>
+            </p>
+        </div>
+
     </header>
     
     <!-- Name Input Modal -->
@@ -322,7 +333,7 @@
 
 <!-- Particle Selection Section -->
 <div class="particle-section" style="margin-bottom: 20px; padding: 15px; background-color: #f8f9fa; border-radius: 8px; border-left: 3px solid #4361ee;">
-    <p style="font-weight: 500; margin-bottom: 10px;">If there is a Singlish particle <span style="color: #4361ee; font-weight: bold;">at the end of the sentence</span>, select the particle and write its variation:</p>
+    <p style="font-weight: 500; margin-bottom: 10px;">Is there a Singlish <span style="color: #4361ee; font-weight: bold;">at the end of any sentence?</span>. If so, select the particle and write its variation:</p>
     
         <div class="particle-checkboxes" style="display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 15px;">
             <label style="display: flex; align-items: center; cursor: pointer;">
